Bugfixes: Typo in grunt LESS config, load info was done poorly

--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -26,12 +26,12 @@
  * Typography
  */
 
-@font-face {
+/*@font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   src: local('Roboto Regular'), local('Roboto-Regular'), url(fonts/Roboto-Regular.woff) format('woff');
-}
+}*/
 
 code, pre, .pre {
   padding: 5px;
@@ -74,8 +74,8 @@ h2 {
   }
 }
 
-.container {
-	padding-top:70px;
+#mainContainer {
+	margin-top: 70px;
 }
 
 /**
